tests222/tests2/test149.out
lli: <stdin>:1:1: error: expected top-level entity
line 4: variable x is not defined
^
